--- a/aboutUs.html
+++ b/aboutUs.html
@@ -68,97 +68,120 @@
 <!--		END HEADER-->
 <!-- InstanceBeginEditable name="main" -->
 <main>
-		<div class="owl-carousel owl-theme" id="banner">
-				<div class="item"><img src="image/Banner-trang-chu-1.jpg" alt=""></div>
-				<div class="item"><img src="image/Banner-trang-chu-2.jpg" alt=""></div>
-				<div class="item"><img src="image/Banner-trang-chu-3.jpg" alt=""></div>
-		</div>
-	
-<!--		about-yoko-->
-		<div class="about-yoko text-ct">		
-				<h1>TRUYỀN THÔNG - BÁO CHÍ NÓI VỀ YOKO</h1>
-				<p>"Trung tâm Du học Nhật Bản uy tín đã được kiểm chứng với hơn 6000 học viên qua gần 10 năm hoạt động"</p>
-				<div class="fl-ct">
-					<img src="image/vtv1.png" alt="">
-					<img src="image/vtv3.png" alt="">
-					<img src="image/VTC.png" alt="">
-				</div>
-				<div class="fl-ct">
-					<img src="image/Dan-tri.png" alt="">
-					<img src="image/VNExpress.png" alt="">
-					<img src="image/Bao-nhat.png" alt="">
-				</div>			
-		</div>
-		
-<!--		introduction-->
-		<div class="intro">
-			<div class="container">
-				<div class="row">
-					<div class="col-6">
-						<h1>ĐÔI NÉT VỀ <br>
-							TRUNG TÂM DU HỌC NHẬT BẢN YOKO <br>
-							<span>Công Ty TNHH Tư Vấn Và Dịch Vụ Việt Nhật Yoko Kính Chào Quý Khách!</span>
-						</h1>
-						<p>Trung tâm Du học Nhật Bản Yoko là đơn vị chuyên về tư vấn Du học Nhật Bản tại Việt Nam. Trong suốt gần 10 năm hoạt động của mình, Yoko luôn là một trong những thương hiệu có uy tín nhất theo đánh giá của Khách hàng và Đối tác. Trải qua quãng thời gian 10 năm, hiện tại Yoko đã có hơn 6000 học viên du học thành công và đan học tập, sinh sống và làm việc tại Nhật Bản.</p>
-					</div>
-					<div class="col-6">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/vaDNUBhdzI4?si=CngHxLDkMTF8IMjm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-12">
-						<p>Đến với Trung tâm Yoko, các học viên sẽ luôn nhận được sự tư vấn nhiệt tình, hiệu quả cho từng trường hợp. Yoko cũng là đơn vị đầu tiên tại Việt Nam cam kết MIỄN 100% PHÍ TƯ VẤN và PHÍ XỬ LÝ HỒ SƠ cho học viên. Với TẦM NHÌN, SỨ MỆNH, và bộ GIÁ TRỊ CỐT LÕI được định hướng rõ ràng. Chúng tôi tự hào mang tới cho học viên sự hỗ trợ tốt nhất, là chỗ dựa vững chắc cho những bước chân đầu tiên hướng tới giấc mơ Du học Nhật Bản của học viên.</p>
-						<a class="see-more" href="https://yoko.edu.vn/gioi-thieu/">Xem thêm</a>
-					</div>
+<!--	banner-->
+	<section class="intro-banner  text-ct">
+		<div class="container">
+			<div class="intro-bg">
+				<div class="intro-banner-caption">
+					<h1>" KHÁCH HÀNG LÀ TRỌNG TÂM - THÀNH CÔNG LÀ TẤT YẾU "</h1>
+					<p>
+                        Yoko là trung tâm tư vấn Du học Nhật Bản chuyên sâu với hơn 8 năm kinh nghiệm hoạt động tại Việt Nam. Tư vấn và xử lý hồ sơ thành công cho hơn 5000 học viên, với tỷ lệ đỗ Visa luôn đảm bảo qua các kỳ là 95%. <br><br>
+
+                        Bám sát các giá trị cốt lõi CHỦ ĐỘNG – CAM KẾT – SÁNG TẠO, Yoko tự tin với những giá trị trung tâm mang tới cho học viên trong suốt thời gian qua. Và tự hào viết tiếp hành trình của mình, với lớp lớp du học sinh đang trưởng thành từng ngày tại Nhật Bản.</p>
 				</div>
 			</div>
 		</div>
+	</section>
 	
-<!--		why choose us-->
-		<div class="why-choose-us text-ct">
-			<div class="container">
-				<div class="row">
-					<div class="col-4">
-						<div class="box1">
-							<img src="image/wcu-1.jpg" alt="" class="pic-1">
-							<h3 class="title">YOKO</h3>
-							<ul class="icon">
-								<li><a href="#"><i class="fa fa-search"></i></a></li>
-								<li><a href="#"><i class="fa fa-link"></i></a></li>
-							</ul>
-                    	</div>						
-						<h1>CHI PHÍ RẺ NHẤT</h1>
-						<p>Trung tâm Du học Nhật Bản Yoko là đơn vị đầu tiên tại Việt Nam áp dụng chương trình MIỄN PHÍ TOÀN BỘ chi phí TƯ VẤN và chi phí XỬ LÝ HỒ SƠ. Trị giá hơn 40 triệu cho tất cả các học viên tham gia Du học Nhật Bản.</p>
+<!--	gioi thieu-->
+	<section class="intro-start">
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<img src="image/gioi-thieu-YOKO.jpg" alt="" class="img-100">
+				</div>
+				<div class="col-6">
+					<h5>Lời ngỏ</h5>
+					<h1>TRUNG TÂM DU HỌC NHẬT BẢN YOKO</h1>
+					<p>Được thành lập với sứ mệnh trở thành cầu nối văn hóa – giáo dục giữa Việt Nam và Nhật Bản. Trong suốt hơn 7 năm hoạt động. Đội ngũ Yoko đoàn kết và chung chí hướng, mang tới trải nghiệm và giá trị tốt nhất cho toàn bộ các học viên. Một vài con số nhỏ dưới đây tuy không đủ, nhưng cũng phần nào chứng minh được thành quả của sự đoàn kết đó:</p>
+					<div class="row">
+						<div class="col-4">
+							<h2>10+</h2>
+							<span><p>Năm hoạt động với chuyên sâu trong lĩnh vực Du học Nhật Bản</p></span>
+						</div>
+						<div class="col-4">
+							<h2>6000+</h2>
+							<span><p>Học viên được tư vấn Du học Nhật Bản thành công</p></span>
+						</div>
+						<div class="col-4">
+							<h2>200+</h2>
+							<span><p>Đối tác chiến lược tại Nhật Bản</p></span>
+						</div>
 					</div>
-					<div class="col-4">
-						<div class="box1">
-							<img src="image/wcu-2.jpg" alt="" class="pic-1">
-							<h3 class="title">YOKO</h3>
-							<ul class="icon">
-								<li><a href="#"><i class="fa fa-search"></i></a></li>
-								<li><a href="#"><i class="fa fa-link"></i></a></li>
-							</ul>
+					<p>Với TẦM NHÌN được cụ thể hóa và SỨ MỆNH mang đầy cảm hứng. Yoko luôn cố gắng hoàn thiện từng ngày, đích đến cuối cùng là tạo ra các giải pháp đột phá về Du học Nhật Bản cho các học viên của trung tâm. Xa hơn nữa, Yoko mong muốn sẽ ghi tên mình vào tâm trí của khách hàng trên cả nước mỗi khi nhớ đến Du học Nhật Bản.</p>
+				</div>
+			</div>	
+		</div>
+	</section>
+	
+<!--		tầm nhìn - sứ mệnh - giá trị cốt loi-->
+	<section class="intro-content">
+		<div class="container">
+			<div class="row items-center">
+				<div class="col-6">
+					<h3>TẦM NHÌN - SỨ MỆNH - GIÁ TRỊ CỐT LÕI</h3>
+					<h1>TẦM NHÌN</h1>
+					<p>Dựa vào tâm huyết cùng sức sáng tạo của đội ngũ nhân sự. Yoko sẽ nâng tầm thương hiệu chuyên về Du học Nhật Bản của trung tâm, phủ rộng mạng lưới học viên trên Việt Nam.</p>
+				</div>
+				<div class="col-6">
+					<img src="image/tam-nhin.png" alt="">
+				</div>
+			</div>
+<!--			end tam nhin-->
+			
+			<div class="row">
+				<div class="col-6">
+					<img src="image/wcu-1.jpg" alt="" class="img-100">
+				</div>
+				<div class="col-6">
+					<div class="mission-content">
+						<h1>SỨ MỆNH</h1>
+						<p>Với mong muốn tất cả mọi người đều được tiếp cận với cơ hội Du học Nhật Bản, ngay từ những ngày đầu thành lập, Trung tâm Du học Nhật Bản Yoko đã luôn cho rằng sứ mệnh của mình là trở thành cầu nối văn hóa – giáo dục giữa hai nước Việt Nam và Nhật Bản.
+						<br><br>
+						Sứ mệnh ấy đang ngày càng được củng cố niềm tin bằng 10 năm hoạt động liên tục, với hơn 6000 học viên được đào tạo chỉnh chu. Thêm vào đó là số lượng đối tác chiến lược ngày càng được mở rộng, chứng minh uy tín của trung tâm.</p>
+					</div>
+				</div>
+			</div>
+<!--			end su menh-->
+			
+			<div class="row items-center">
+				<div class="col-6">
+					<div class="value-section">
+						<h1>GIÁ TRỊ CỐT LÕI</h1>
+						<div class="owl-carousel owl-theme" id="value-content">
+                           <div class="item">
+								<div class="value-box">
+									<div class="value-caption">
+										<h1>CHỦ ĐỘNG</h1>
+										<p>Luôn mang tinh thần chủ động với mọi công việc mà mình chịu trách nhiệm, chủ động đề xuất hướng giải quyết hiệu quả nhất cho từng trường hợp cụ thể.</p>
+									</div>
+								</div>
+							</div>
+                            <div class="item">
+								<div class="value-box">
+									<div class="value-caption">
+										<h1>CAM KẾT</h1>
+										<p>Nhân sự làm việc với cam kết cao nhất, đảm bảo mọi công việc đều được hoàn thành, mọi khách hàng đều được hỗ trợ tốt nhất.</p>
+									</div>
+								</div>
+							</div>
+							 <div class="item">
+								<div class="value-box">
+									<div class="value-caption">
+										<h1>SÁNG TẠO</h1>
+										<p>Nguyên tắc là bắt buộc, nhưng trong mọi việc Yoko luôn cần đề cao tính sáng tạo của các cá nhân. Nhờ điều này mà hiệu suất của nhân sự sẽ được đẩy lên cao nhất.</p>
+									</div>
+								</div>
+							</div>
                     	</div>
-						<h1>TỶ LỆ ĐỖ CAO HÀNG ĐẦU</h1>
-						<p>Nền tảng gần 10 năm kinh nghiệm tư vấn du học Nhật Bản, Yoko tự tin khẳng định tỷ lệ đỗ Visa của học viên tại trung tâm luôn đạt top cao nhất Việt Nam – hơn 6000 học viên với tỷ lệ đỗ đi Nhật tới 95%.</p>
 					</div>
-					<div class="col-4">
-						<div class="box1">
-							<img src="image/wcu-3.jpg" alt="" class="pic-1">
-							<h3 class="title">YOKO</h3>
-							<ul class="icon">
-								<li><a href="#"><i class="fa fa-search"></i></a></li>
-								<li><a href="#"><i class="fa fa-link"></i></a></li>
-							</ul>
-                    	</div>
-						<h1>TƯ VẤN TẬN TÂM</h1>
-						<p>Nhằm trang bị vốn kiến thức cho Du học sinh. Trung tâm Yoko trân trọng mang đến các khóa học tiếng Nhật, khóa trang bị kỹ năng phỏng vấn và kỹ năng xin việc làm thêm tại Nhật cho tất cả học viên tham gia Du học Nhật Bản tại trung tâm.</p>
-					</div>
-				</div>			
+				</div>
+				<div class="col-6">
+					<img src="image/gia-tri-cot-loi.png" alt="">
+				</div>
 			</div>
 		</div>
-	
-<!--		our service-->
+	</section>
 </main>
 <!-- InstanceEndEditable -->
 <!--		END MAIN-->
