--- a/service.html
+++ b/service.html
@@ -68,97 +68,57 @@
 <!--		END HEADER-->
 <!-- InstanceBeginEditable name="main" -->
 <main>
-		<div class="owl-carousel owl-theme" id="banner">
-				<div class="item"><img src="image/Banner-trang-chu-1.jpg" alt=""></div>
-				<div class="item"><img src="image/Banner-trang-chu-2.jpg" alt=""></div>
-				<div class="item"><img src="image/Banner-trang-chu-3.jpg" alt=""></div>
-		</div>
-	
-<!--		about-yoko-->
-		<div class="about-yoko text-ct">		
-				<h1>TRUYỀN THÔNG - BÁO CHÍ NÓI VỀ YOKO</h1>
-				<p>"Trung tâm Du học Nhật Bản uy tín đã được kiểm chứng với hơn 6000 học viên qua gần 10 năm hoạt động"</p>
-				<div class="fl-ct">
-					<img src="image/vtv1.png" alt="">
-					<img src="image/vtv3.png" alt="">
-					<img src="image/VTC.png" alt="">
-				</div>
-				<div class="fl-ct">
-					<img src="image/Dan-tri.png" alt="">
-					<img src="image/VNExpress.png" alt="">
-					<img src="image/Bao-nhat.png" alt="">
-				</div>			
-		</div>
-		
-<!--		introduction-->
-		<div class="intro">
+			<div class="services bg-gray  text-ct">
 			<div class="container">
+				<h1>CÁC DỊCH VỤ CHÍNH ĐƯỢC CUNG CẤP BỞI TRUNG TÂM DU HỌC NHẬT BẢN YOKO</h1>
+				<p>Chuyên môn cao về Du học Nhật Bản trong gần 10 năm hoạt động. <br>
+Yoko mang tới các dịch vụ chính liên quan tới Du học Nhật Bản cho mọi nhu cầu của học viên.</p>
 				<div class="row">
-					<div class="col-6">
-						<h1>ĐÔI NÉT VỀ <br>
-							TRUNG TÂM DU HỌC NHẬT BẢN YOKO <br>
-							<span>Công Ty TNHH Tư Vấn Và Dịch Vụ Việt Nhật Yoko Kính Chào Quý Khách!</span>
-						</h1>
-						<p>Trung tâm Du học Nhật Bản Yoko là đơn vị chuyên về tư vấn Du học Nhật Bản tại Việt Nam. Trong suốt gần 10 năm hoạt động của mình, Yoko luôn là một trong những thương hiệu có uy tín nhất theo đánh giá của Khách hàng và Đối tác. Trải qua quãng thời gian 10 năm, hiện tại Yoko đã có hơn 6000 học viên du học thành công và đan học tập, sinh sống và làm việc tại Nhật Bản.</p>
+					<div class="col-4">
+						<div class="box-service">
+							<div class="frame">
+								<img src="image/wcu-1.jpg" alt="">
+							</div>							
+							<h2 class="mg-t-bt-30">TƯ VẤN DU HỌC NHẬT BẢN</h2>
+							<div class="box-content">			
+								<p>Mang chương trình Du học Nhật bản tự túc và học bổng đến gần nhất với các học viên đang tìm hiểu về Du học Nhật Bản tiết kiệm.</p>
+								<span class="see-more-1">
+									<a href="">Xem thêm</a>
+								</span>	
+							</div>						
+						</div>
 					</div>
-					<div class="col-6">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/vaDNUBhdzI4?si=CngHxLDkMTF8IMjm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<div class="col-4">
+						<div class="box-service">
+							<div class="frame">
+								<img src="image/wcu-2.jpg" alt="">
+							</div>					
+							<h2>CHƯƠNG TRÌNH THỰC TẬP SINH QUAY LẠI</h2>
+							<div class="box-content">	
+								<p>Tư vấn và hỗ trợ các bạn Thực tập sinh từng tham gia XKLĐ tại Nhật được quay lại Nhật học tập với tư cách là Du học sinh.</p>
+								<span class="see-more-1">
+									<a href="">Xem thêm</a>
+								</span>						
+							</div>
+						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-12">
-						<p>Đến với Trung tâm Yoko, các học viên sẽ luôn nhận được sự tư vấn nhiệt tình, hiệu quả cho từng trường hợp. Yoko cũng là đơn vị đầu tiên tại Việt Nam cam kết MIỄN 100% PHÍ TƯ VẤN và PHÍ XỬ LÝ HỒ SƠ cho học viên. Với TẦM NHÌN, SỨ MỆNH, và bộ GIÁ TRỊ CỐT LÕI được định hướng rõ ràng. Chúng tôi tự hào mang tới cho học viên sự hỗ trợ tốt nhất, là chỗ dựa vững chắc cho những bước chân đầu tiên hướng tới giấc mơ Du học Nhật Bản của học viên.</p>
-						<a class="see-more" href="https://yoko.edu.vn/gioi-thieu/">Xem thêm</a>
+					<div class="col-4">
+						<div class="box-service">
+							<div class="frame">
+								<img src="image/wcu-3.jpg" alt="">
+							</div>					
+							<h2 class="mg-t-bt-30">ĐÀO TẠO TIẾNG NHẬT</h2>
+							<div class="box-content">							
+								<p class="mg-bt-30">Đào tạo Nhật ngữ phù hợp với học viên có nhu cầu học tập và làm việc tại Nhật Bản. Tại Yoko các học viên được cá nhân hóa chương trình học theo đúng nguyện vọng.</p>
+								<span class="see-more-1">
+									<a href="">Xem thêm</a>
+								</span>	
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	
-<!--		why choose us-->
-		<div class="why-choose-us text-ct">
-			<div class="container">
-				<div class="row">
-					<div class="col-4">
-						<div class="box1">
-							<img src="image/wcu-1.jpg" alt="" class="pic-1">
-							<h3 class="title">YOKO</h3>
-							<ul class="icon">
-								<li><a href="#"><i class="fa fa-search"></i></a></li>
-								<li><a href="#"><i class="fa fa-link"></i></a></li>
-							</ul>
-                    	</div>						
-						<h1>CHI PHÍ RẺ NHẤT</h1>
-						<p>Trung tâm Du học Nhật Bản Yoko là đơn vị đầu tiên tại Việt Nam áp dụng chương trình MIỄN PHÍ TOÀN BỘ chi phí TƯ VẤN và chi phí XỬ LÝ HỒ SƠ. Trị giá hơn 40 triệu cho tất cả các học viên tham gia Du học Nhật Bản.</p>
-					</div>
-					<div class="col-4">
-						<div class="box1">
-							<img src="image/wcu-2.jpg" alt="" class="pic-1">
-							<h3 class="title">YOKO</h3>
-							<ul class="icon">
-								<li><a href="#"><i class="fa fa-search"></i></a></li>
-								<li><a href="#"><i class="fa fa-link"></i></a></li>
-							</ul>
-                    	</div>
-						<h1>TỶ LỆ ĐỖ CAO HÀNG ĐẦU</h1>
-						<p>Nền tảng gần 10 năm kinh nghiệm tư vấn du học Nhật Bản, Yoko tự tin khẳng định tỷ lệ đỗ Visa của học viên tại trung tâm luôn đạt top cao nhất Việt Nam – hơn 6000 học viên với tỷ lệ đỗ đi Nhật tới 95%.</p>
-					</div>
-					<div class="col-4">
-						<div class="box1">
-							<img src="image/wcu-3.jpg" alt="" class="pic-1">
-							<h3 class="title">YOKO</h3>
-							<ul class="icon">
-								<li><a href="#"><i class="fa fa-search"></i></a></li>
-								<li><a href="#"><i class="fa fa-link"></i></a></li>
-							</ul>
-                    	</div>
-						<h1>TƯ VẤN TẬN TÂM</h1>
-						<p>Nhằm trang bị vốn kiến thức cho Du học sinh. Trung tâm Yoko trân trọng mang đến các khóa học tiếng Nhật, khóa trang bị kỹ năng phỏng vấn và kỹ năng xin việc làm thêm tại Nhật cho tất cả học viên tham gia Du học Nhật Bản tại trung tâm.</p>
-					</div>
-				</div>			
-			</div>
-		</div>
-	
-<!--		our service-->
+		</div>		
 </main>
 <!-- InstanceEndEditable -->
 <!--		END MAIN-->
